--- a/nginx_ssl/_nginx.conf
+++ b/nginx_ssl/_nginx.conf
@@ -1,11 +1,11 @@
-upstream frontend {
-   server frontend:3000;
-}
+#upstream frontend {
+ #   server frontend:3000;
+#}
 
 
-upstream backend {
-    server bitracking_api:80;
-}
+#upstream backend {
+#    server backend:8087;
+#}
 
 server {
     listen [::]:80;
