--- a/nginx_ssl/1nginx.conf
+++ b/nginx_ssl/1nginx.conf
@@ -4,7 +4,12 @@ upstream frontend {
 
 
 upstream backend {
-    server bitracking_api:8087;
+    server bitracking_api:80;
+}
+
+
+upstream s3 {
+    server api_s3:9000;
 }
 
 server {
@@ -85,4 +90,44 @@ server {
         proxy_pass http://backend;
     }
 
+}
+
+
+server {
+    listen [::]:80;
+    listen 80;
+
+    server_name static.bitracking.ru;
+    access_log  /var/log/nginx/access.log;
+    error_log   /var/log/nginx/error.log;
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+
+
+}
+
+server {
+    listen [::]:443 ssl http2;
+    listen 443 ssl http2;
+    server_name static.bitracking.ru;
+    server_tokens off;
+
+    ssl_certificate /etc/letsencrypt/live/bitracking.ru/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/bitracking.ru/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+    location / {
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Proto https;
+        proxy_pass http://s3;
+    }
 }
